Fix the GWT list views pager current page input size, was too small.
git-svn-id: svn://svn.opentaps.org/opentaps_all/versions/1.4/trunk@13827 d3523486-f5fe-0310-a41a-a15a4e76f3c7

--- a/hot-deploy/opentaps-common/src/common/org/opentaps/gwt/common/public/opentaps.css
+++ b/hot-deploy/opentaps-common/src/common/org/opentaps/gwt/common/public/opentaps.css
@@ -92,6 +92,11 @@
   display:inline-block;
 }
 
+/* fix the pager current page input height */
+.x-tbar-page-number { 
+    height:12px !important;
+}
+
 /* Special css class to hide the Tab Bar in TabPanel */
 
 .tabBarHidden .x-tab-panel .x-tab-panel-header { 
